@@ -3,6 +3,8 @@ CHANGES.txt - 08/04/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The scheduler's denial-of-service checks did not work
+	  properly with IPv6 addresses (STR #1134)
 	- The lp and lpr commands did not error out properly when
 	  they were unable to write to a temporary file (STR
 	  #1129)
